# libflatarray

./: CMakeLists.txt
Arkansol/: avx512.cpp  neon.c  neon.cpp
examples/: CMakeLists.txt
src/: short_vec.hpp
src/detail/: short_vec_IMCI_float_16.hpp  short_vec_avx512_float_16.hpp  short_vec_neon_float_4.hpp  short_vec_scalar_float_4.hpp  short_vec_sse_float_16.hpp  short_vec_sse_float_8.hpp
test/: short_vec_test.cpp  test.hpp
